--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                             </a>
                         </li>
                         <li class="menuList-item">
-                            <a href="./chamcong.html">
+                            <a href="./tinhluong.html">
                                 <div class="menulist-item-icon">
                                     <i class="ti-bar-chart"></i>
                                 </div>
-                                <span class="menuList-item-text">Chấm công</span>
+                                <span class="menuList-item-text">Tính lương</span>
                             </a>
                         </li>
                     </ul>
