--- a/nhansu.html
+++ b/nhansu.html
@@ -39,11 +39,11 @@
                             </a>
                         </li>
                         <li class="menuList-item">
-                            <a href="./chamcong.html">
+                            <a href="./tinhluong.html">
                                 <div class="menulist-item-icon">
                                     <i class="ti-bar-chart"></i>
                                 </div>
-                                <span class="menuList-item-text">Chấm công</span>
+                                <span class="menuList-item-text">Tính lương</span>
                             </a>
                         </li>
                     </ul>
@@ -85,7 +85,7 @@
                                             </div>
                                         </div>
                                         <div class="employee-action">
-                                            <span class="employee-fix">
+                                            <span class="employee-show-info">
                                                 <i class="ti-menu-alt"></i>
                                             </span>
                                             <span class="employee-delete">
@@ -105,7 +105,7 @@
                                             </div>
                                         </div>
                                         <div class="employee-action">
-                                            <span class="employee-fix">
+                                            <span class="employee-show-info">
                                                 <i class="ti-menu-alt"></i>
                                             </span>
                                             <span class="employee-delete">
@@ -125,7 +125,7 @@
                                             </div>
                                         </div>
                                         <div class="employee-action">
-                                            <span class="employee-fix">
+                                            <span class="employee-show-info">
                                                 <i class="ti-menu-alt"></i>
                                             </span>
                                             <span class="employee-delete">
@@ -145,7 +145,7 @@
                                             </div>
                                         </div>
                                         <div class="employee-action">
-                                            <span class="employee-fix">
+                                            <span class="employee-show-info">
                                                 <i class="ti-menu-alt"></i>
                                             </span>
                                             <span class="employee-delete">
@@ -167,7 +167,7 @@
                                             </div>
                                         </div>
                                         <div class="employee-action">
-                                            <span class="employee-fix">
+                                            <span class="employee-show-info">
                                                 <i class="ti-menu-alt"></i>
                                             </span>
                                             <span class="employee-delete">
@@ -187,7 +187,7 @@
                                             </div>
                                         </div>
                                         <div class="employee-action">
-                                            <span class="employee-fix">
+                                            <span class="employee-show-info">
                                                 <i class="ti-menu-alt"></i>
                                             </span>
                                             <span class="employee-delete">
@@ -207,7 +207,7 @@
                                             </div>
                                         </div>
                                         <div class="employee-action">
-                                            <span class="employee-fix">
+                                            <span class="employee-show-info">
                                                 <i class="ti-menu-alt"></i>
                                             </span>
                                             <span class="employee-delete">
@@ -227,7 +227,7 @@
                                             </div>
                                         </div>
                                         <div class="employee-action">
-                                            <span class="employee-fix">
+                                            <span class="employee-show-info">
                                                 <i class="ti-menu-alt"></i>
                                             </span>
                                             <span class="employee-delete">
@@ -373,8 +373,54 @@
                 </div>
             </div>
             <!-- container end -->
-        </div>
-            
+            <!-- modal -->
+            <div class="modal">
+                <div class="modal-container">
+                    <h2 class="modal-title">Sửa thông tin nhân viên</h2>
+                    <div class="modal-body">
+                        <div class="modal-employee-doc">
+                            <div class="col-full">
+                                <div class="col-half">
+                                    <div class="modal-name-gender">
+                                        <div class="modal-name">
+                                            <span>Họ và tên:</span>
+                                            <span>Nguyễn Duy Hiếu </span>
+                                        </div>
+                                        <div class="modal-gender">
+                                            <span>Giới tính:</span>
+                                            <span>Nam</span>
+                                        </div>
+                                    </div>
+                                    <div class="modal-birthday-hometown">
+                                        <div class="modal-birthday">
+                                            <span class="modal-birthday-title">Ngày, tháng, năm sinh: </span>
+                                            <span>04/01/2001</span>
+                                        </div>
+                                        <div class="modal-hometown">
+                                            <span>Nơi sinh: </span>
+                                            <span>Như quỳnh văn lâm hưng yên</span>
+                                        </div>
+                                    </div>
+                                    <div class="modal-phone-number">
+                                        <span>Số điện thoại: </span>
+                                        <span>0979450816</span>
+                                    </div>
+                                    <div class="modal-education">
+                                        <span>Trình độ: </span>
+                                        <span>Đại học</span>
+                                    </div>
+
+                                </div>
+                                <div class="col-half">
+                                    <div class="modal-img"></div>
+                                </div>
+                            </div>
+                            <button class="close-btn btn">Đóng</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>   
     </div>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/nhansu.js"></script>
