--- a/nhansu.html
+++ b/nhansu.html
@@ -376,7 +376,7 @@
             <!-- modal -->
             <div class="modal">
                 <div class="modal-container">
-                    <h2 class="modal-title">Sửa thông tin nhân viên</h2>
+                    <h2 class="modal-title">Thông tin nhân viên</h2>
                     <div class="modal-body">
                         <div class="modal-employee-doc">
                             <div class="col-full">
